infra/k8s/friends-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: friends-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: friends-mysql
  template:
    metadata:
      labels:
        app: friends-mysql
    spec:
      containers:
        - name: friends-mysql
          image: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: friends-ps
              mountPath: /var/lib/mysql
              subPath: friends-mysql
      volumes:
        - name: friends-ps
          persistentVolumeClaim:
            claimName: friends-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: friends-mysql-service
spec:
  selector:
    app: friends-mysql
  ports:
    - name: friends-mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
