infra/k8s/users-mysql-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-mysql-depl
spec:
  replicas: 1
  selector:
    matchLabels:
      app: users-mysql
  template:
    metadata:
      labels:
        app: users-mysql
    spec:
      containers:
        - name: users-mysql
          image: mysql
          ports:
            - containerPort: 3306
              name: mysql
          volumeMounts:
            - name: users-ps
              mountPath: /var/lib/mysql
              subPath: users-mysql
      volumes:
        - name: users-ps
          persistentVolumeClaim:
            claimName: users-mysql-pvc
---
apiVersion: v1
kind: Service
metadata:
  name: users-mysql-service
spec:
  selector:
    app: users-mysql
  ports:
    - name: users-mysql
      protocol: TCP
      port: 3306
      targetPort: 3306
