infra/k8s/ingress-srv.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-srv
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  rules:
    - host: fadebook.com
      http:
        paths:
          - path: /api/posts/?(.*)
            pathType: Prefix
            backend:
              service:
                name: posts-service
                port:
                  number: 3000
          - path: /api/users/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 3000
          - path: /api/auth/?(.*)
            pathType: Prefix
            backend:
              service:
                name: users-service
                port:
                  number: 3000
          - path: /api/friends/?(.*)
            pathType: Prefix
            backend:
              service:
                name: friends-service
                port:
                  number: 3000
